<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".booking.ReserveProductFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reservation_form"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/reserve"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textProgress"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="0dp"
                android:text="@string/reserve_now"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/progress"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:drawableEnd="@drawable/ic_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:drawableEnd="@drawable/ic_address" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_local_phone_24"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/products"
                android:drawableEnd="@drawable/ic_baseline_shopping_cart_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputExpectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expected_date"
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:drawableEnd="@drawable/ic_baseline_notes_24" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonReserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve_product" />
    </LinearLayout>
</LinearLayout>