<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".checkout.CheckOutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F0FFFF"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/checkout_confirmation"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
        <ImageButton
            android:id="@+id/buttonConfirm"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/confirm" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imageReciept"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/image"
        android:contentDescription="@string/attach" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="10dp"
        android:visibility="gone" />
    <Button
        android:id="@+id/attachPaymentReciept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/attach_your_payment_reciept"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text=" Marko Rudio \n09090900909"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="Note: This payment is not Refundable"
        android:textStyle="italic"
        android:textSize="15sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textReferenceNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/ref_no"
        android:background="#00FFFFFF">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:inputType="number"
            tools:targetApi="jelly_bean" />
    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textItemCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                android:id="@+id/textItemsTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/items" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textCheckoutTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/layoutItems"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>


</LinearLayout>