<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/checkbg"
        android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:id="@+id/product_title"
                android:layout_weight="1"
                style="@style/TextAppearance.MaterialComponents.Headline5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/product_price"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

        <TextView
            android:id="@+id/product_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            tools:text="Category"/>

        <TextView
            android:id="@+id/product_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            tools:text="Stocks"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/addToCartContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/buttonDecrement"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_baseline_indeterminate_check_box_24"
                android:contentDescription="@string/minus" />
            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:textSize="18sp"/>
            <ImageButton
                android:id="@+id/buttonIncrement"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_baseline_add_box_24"
                android:contentDescription="@string/add" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1616FF"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="10dp"
            android:visibility="gone" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>